Fixes send to spira margins
Fixes the send to spira element being too far to the right.

--- a/src/taskpane/taskpane.css
+++ b/src/taskpane/taskpane.css
@@ -384,7 +384,6 @@ ul.form {
 
 #send-to-spira {
     display: inline-block;
-    margin-left: 2.5%;
     margin-top: 5%;
     margin-bottom: 3%;
 }
